# rl-jax

./: .gitignore  README.md  cartpole.py  compare.py  ilqr.py  lqr.py  mpc.py  pyproject.toml  q_learning.py  sarsa.py
bench/: __init__.py  metrics.py
control/: ilqr.py  lqr.py  mpc.py
env/: cartpole.py
output/: deep_q_learning_metrics.npz  ilqr_metrics.npz  ilqr_results.npz  lqr_metrics.npz  lqr_results.npz  mc_control_metrics.npz  mpc_metrics.npz  mpc_results.npz  q_learning_metrics.npz  q_learning_results.npz  sarsa_metrics.npz  sarsa_results.npz
rl/: deep_q_learning.py  mc_control.py  q_learning.py  sarsa.py
