[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["env", "control", "rl"]

[project]
name = "jax-tutorial"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "wandb>=0.19.0",
    "flax>=0.12.6",
    "gymnasium>=1.2.3",
    "jax>=0.9.2",
    "matplotlib>=3.10.9",
    "optax>=0.2.8",
    "pygame>=2.6.1",
    "scipy-stubs~=1.17.1",
    "tqdm>=4.67.3",
]
